# weatherStationAPIServer

./: .gitignore  Cargo.toml  README.md  statements.txt
connections/: Cargo.toml
connections/src/: lib.rs  udp.rs
data_handler/: Cargo.toml
data_handler/src/: lib.rs  routes.rs
data_handler/src/api/: current.rs  history.rs  mod.rs  trend.rs  update.rs
data_handler/src/db/: sqlite.rs
data_handler/src/global/: current.rs  mod.rs  node.rs  runtime.rs  types.rs
data_handler/src/udp/: update.rs
inet/: Cargo.toml
inet/src/: lib.rs
inet/src/protocoll/: http.rs
lang/: Cargo.toml
lang/src/: types.rs
mt_handler/: Cargo.toml
mt_handler/src/: lib.rs
routes/: Cargo.toml
routes/src/: lib.rs  routes.rs
routes/src/api/: current.rs  forecast.rs  history.rs  update.rs
srv/: Cargo.toml
srv/src/: main.rs
