[package]
name = "connections"
version = "0.1.0"
authors = ["wolfbiker1 <be631wil@htwg-konstanz.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
routes = { path = "../routes" }
influxdb = { version = "0.4.0", features = ["derive"] }