[package]
name = "data_handler"
version = "0.1.0"
authors = ["wolfbiker1 <be631wil@htwg-konstanz.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inet = { path = "../inet" }
lang = { path = "../lang" }
serde = { version = "1.0.136", features = ["derive"] }
rusqlite = "0.25.3"
serde_json = "1.0.64"
chrono = { version = "0.4", features = ["serde"] }