[package]
name = "srv"
version = "0.1.0"
authors = ["wolfbiker1 <be631wil@htwg-konstanz.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mt_handler = { path = "../mt_handler" }
connections = { path = "../connections" }
routes = { path = "../routes" }
rusqlite = "0.25.3"
